# ScratchCpp

./: 0.CodeTest.cpp  1.MyVector.cpp  11.MemoryTest.cpp  12.DoubleBuffer.cpp  2.MySharedptr.cpp  3.ProduceAndConsumer.cpp  4.LRUCache.cpp  5.Singleton.cpp  6.ThreadPool.cpp  7.NickIOUring.cpp  9.Cast.cpp  CMakeLists.txt  test
10.Kafka/: 10.KafkaConsumer.cpp  10.KafkaProducer.cpp  CMakeLists.txt
8.IOUringWithBuffer/: Buffer.cpp  Buffer.h  CMakeLists.txt  IOUringHandler.cpp  IOUringHandler.h  main.cpp
